--- a/soepmerge.ipynb
+++ b/soepmerge.ipynb
@@ -21,7 +21,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "a2653846-12d9-406e-9fa7-0a04f269e70f",
    "metadata": {},
@@ -49,7 +48,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "206b7ee1-e64d-4319-badb-771b3df06412",
    "metadata": {},
@@ -195,8 +193,6 @@
     "    \"pmonin\",  # month of interview\n",
     "    \"plh0171\",  # Current Health: [1-5] (1=schlecht, 10=gut)\n",
     "    \"plb0021\",  # Arbeitslos gemeldet: [2] No [1] Yes\n",
-    "    \"plh0173\",  # satisfaction with work: [0-10] not satisfied <-> very satisfied\n",
-    "    \"plh0174\",  # satisfaction with home work:  [0-10] not satisfied <-> very satisfied \n",
     "    # NOTE: take max of plh0173 and plh0174\n",
     "    \"plh0175\" # Satisfaction With Household Income\n",
     "}"
@@ -234,7 +230,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "89724dbe-5054-4135-a849-d757419879b9",
    "metadata": {},
@@ -244,15 +239,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "f61636b6-625a-401e-9cf7-dd64f79f43d5",
    "metadata": {},
    "outputs": [],
    "source": [
     "soep = pd.read_csv(pl_path, usecols=pl_var)\n",
-    "# because (plh0173 approx plh0174):\n",
-    "soep[\"plh0173\"] = soep[[\"plh0173\", \"plh0174\"]].max()\n",
-    "soep.drop(columns=\"plh0174\", inplace=True)\n",
     "\n",
     "## MERGE WITH OTHER DATASETS\n",
     "# merge with tracking data\n",
@@ -265,22 +257,37 @@
     "## CALCULATE RELEVANT VARIABLES\n",
     "# age:\n",
     "soep[\"age\"] = soep[\"syear\"] - soep[\"gebjahr\"]\n",
+    "soep[soep[\"age\"] > 120] = np.nan\n",
     "# time stamp:\n",
     "soep.rename({'syear':\"year\", 'pmonin':\"month\", 'ptagin':\"day\"}, axis=1, inplace=True)\n",
     "soep[\"time\"] = pd.to_datetime(soep[['year', 'month', 'day']], errors='coerce')\n",
     "# drop unuseful columns:\n",
-    "soep.drop(['year', 'month', 'day', 'gebjahr'], axis=1, inplace=True)\n",
+    "soep.drop(['day', 'year', 'month', 'gebjahr'], axis=1, inplace=True)\n",
     "# delete invalid time stamps as they cannot be merged with climate data:\n",
-    "soep = soep[soep['time'].notna()]\n",
+    "soep = soep[soep['time'].notna()].reset_index()\n",
+    "# all values that are negative are nan values\n",
+    "soep[soep.select_dtypes(include=['int']) < 0] = np.nan\n",
+    "\n",
+    "## DROP DUPLICATE ROWS\n",
+    "soep.set_index(['pid', 'time'])\n",
+    "soep = soep[~soep.index.duplicated(keep='first')]\n",
     "\n",
     "## SAFE DATAFRAME\n",
-    "soep.to_csv(\"./prod/soeplong.csv\", index=False)"
+    "soep.to_csv(\"./prod/soeplong.csv\", index=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb5f121e-e24e-4687-86c3-f3339b9f9b47",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 ('thesis')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -294,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0 | packaged by conda-forge | (main, Oct 25 2022, 06:24:40) [GCC 10.4.0]"
+   "version": "3.11.0"
   },
   "vscode": {
    "interpreter": {
