--- a/soepmerge.ipynb
+++ b/soepmerge.ipynb
@@ -266,7 +266,7 @@
     "# delete invalid time stamps as they cannot be merged with climate data:\n",
     "soep = soep[soep['time'].notna()].reset_index()\n",
     "# all values that are negative are nan values\n",
-    "soep[soep.select_dtypes(include=['int']) < 0] = np.nan\n",
+    "soep[soep.select_dtypes(include=['int', 'float']) < 0] = np.nan\n",
     "\n",
     "## DROP DUPLICATE ROWS\n",
     "soep.set_index(['pid', 'time'])\n",
