--- a/explore.ipynb
+++ b/explore.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "5028e8f9-70aa-48b0-896d-02cedfdb1ca2",
    "metadata": {},
    "outputs": [],
@@ -21,6 +21,9 @@
     "import seaborn as sns\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "%matplotlib inline  \n",
     "\n",
     "sns.set_theme()"
@@ -36,20 +39,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "id": "a70d670d-4ad1-49c7-92b8-4d4445c3297b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "soepvars = [\n",
-    "    'time', 'pid', 'plh0182', 'bula_h', 'sex', 'age', 'hlc0005_h'\n",
+    "target = ['plh0182', 'plh0182d']\n",
+    "exogsoep = [\n",
+    "    'bula_h', 'sex', 'age', 'hlc0005_h'\n",
     "]\n",
-    "weathervars = [\n",
-    "    'tavg_0', 'tavg_1', 'tavg_2', 'tavg_3', 'tavg_4',\n",
-    "    'tavg_5', 'tavg_6', 'tavg_7', 'prcp', 'tsun', 'wspd', 'pres'\n",
+    "exogweather = [\n",
+    "    'tavgbin_0', 'tavgbin_1', 'tavgbin_2', 'tavgbin_3', 'tavgbin_4',\n",
+    "    'tavgbin_5', 'tavgbin_6', 'tavgbin_7', 'prcp', 'tsun', 'wspd', 'pres'\n",
     "]\n",
-    "soep = pd.read_csv('./prod/data.csv', usecols=soepvars+weathervars)\n",
-    "soep['time'] = pd.to_datetime(soep['time'])"
+    "soep = pd.read_csv('./prod/data.csv', usecols=target+exogsoep+exogweather)"
    ]
   },
   {
@@ -57,28 +60,81 @@
    "id": "6140b314-f2eb-496d-8300-fa0d3a213f41",
    "metadata": {},
    "source": [
-    "Resample in case of memory problems. Load all instances located in Berlin for later analysis.\n",
-    "\n",
-    "TODO: change target variable (`plh0182` i.e. SWB) to rate of change."
+    "For a first analisys we focus on Berlin. The reason being that it is the smallest NUTS1 area and will therefore contain the most accurate average weather data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "b9106dc1-68a4-47ce-b50e-8e324d9790fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "berlin = soep[soep['bula_h'] == 11]\n",
-    "soep = soep.sample(200000)"
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# read all hh data that is in berlin and drop all unusable data\n",
+    "berlin = soep[soep['bula_h'] == 11].drop(columns='bula_h').dropna()\n",
+    "\n",
+    "# free up memory\n",
+    "del soep\n",
+    "\n",
+    "# split into target and training variables \n",
+    "y = berlin['plh0182d']\n",
+    "X = berlin[['sex', 'age', 'hlc0005_h']+exogweather]\n",
+    "\n",
+    "# split into train test split\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X.values, y.values, test_size=0.33)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "201ee92b-fca8-4920-b52e-eff0890f1f30",
+   "id": "8e4cae66-1481-4ac2-b349-405942ee5ced",
    "metadata": {},
    "source": [
-    "The following plots are all the results of simple linear regressions between the target variable and the covariates."
+    "## First regression model (cross sectional)\n",
+    "\n",
+    "TODO\n",
+    "- take rate of change within swb variable with respect to the individual person (pid).\n",
+    "- run OLS regression model.\n",
+    "\n",
+    "TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "335a1005-f057-4a33-b54c-41700b057869",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2.43279742e-02,  1.40910902e-04,  6.25824437e-06,  1.20981756e-02,\n",
+       "        1.32429752e-02,  1.69946902e-02,  1.23667069e-02,  1.48601457e-02,\n",
+       "        2.12646967e-02, -3.98210387e-03, -8.68452866e-02, -1.83163967e-02,\n",
+       "       -5.91507868e-06,  4.18666595e-03,  1.24989133e-03])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "lm = LinearRegression()\n",
+    "\n",
+    "result = lm.fit(X, y)\n",
+    "result.coef_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8baed25a-f72f-4d45-abad-f45d50f25360",
+   "metadata": {},
+   "source": [
+    "## Plots of findings"
    ]
   },
   {
@@ -662,20 +718,6 @@
    "source": [
     "# clear some memory\n",
     "del soep"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8e4cae66-1481-4ac2-b349-405942ee5ced",
-   "metadata": {},
-   "source": [
-    "## First regression model (cross sectional)\n",
-    "\n",
-    "TODO\n",
-    "- take rate of change within swb variable with respect to the individual person (pid).\n",
-    "- run OLS regression model.\n",
-    "\n",
-    "TODO"
    ]
   },
   {
