--- a/soepmerge.ipynb
+++ b/soepmerge.ipynb
@@ -168,7 +168,7 @@
     "    \"sex\", # gender [1] female [2] male\n",
     "    \"gebjahr\", # year of birth\n",
     "    \"partner\" # [0] no partner, [1] spouse, [2] partner,\n",
-    "                              # [3] Probably spouse, [4] probably partner\n",
+    "              # [3] Probably spouse, [4] probably partner\n",
     "    # NOTE: join 1&3 and 2&4\n",
     "}\n",
     "\n",
@@ -191,7 +191,7 @@
     "    # relevant covariates\n",
     "    \"ptagin\",  # day of interview\n",
     "    \"pmonin\",  # month of interview\n",
-    "    \"plh0171\",  # Current Health: [1-5] (1=schlecht, 10=gut)\n",
+    "    \"plh0171\",  # Current Health: [1-10] (1=schlecht, 10=gut)\n",
     "    \"plb0021\",  # Arbeitslos gemeldet: [2] No [1] Yes\n",
     "    # NOTE: take max of plh0173 and plh0174\n",
     "    \"plh0175\" # Satisfaction With Household Income\n",
@@ -213,10 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ppathl = pd.read_csv(ppathl_path, usecols=ppathl_var)\n",
-    "# because [3] approx [1] and [4] approx [2]:\n",
-    "df_ppathl[df_ppathl['partner'] == 3] = 1\n",
-    "df_ppathl[df_ppathl['partner'] == 4] = 2"
+    "df_ppathl = pd.read_csv(ppathl_path, usecols=ppathl_var)"
    ]
   },
   {
@@ -239,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f61636b6-625a-401e-9cf7-dd64f79f43d5",
    "metadata": {},
    "outputs": [],
@@ -255,34 +252,186 @@
     "soep = soep.merge(df_hh, on=[\"syear\", \"hid\"], how=\"inner\")\n",
     "\n",
     "## CALCULATE RELEVANT VARIABLES\n",
-    "# age:\n",
-    "soep[\"age\"] = soep[\"syear\"] - soep[\"gebjahr\"]\n",
-    "soep[soep[\"age\"] > 120] = np.nan\n",
     "# time stamp:\n",
     "soep.rename({'syear':\"year\", 'pmonin':\"month\", 'ptagin':\"day\"}, axis=1, inplace=True)\n",
     "soep[\"time\"] = pd.to_datetime(soep[['year', 'month', 'day']], errors='coerce')\n",
     "# drop unuseful columns:\n",
-    "soep.drop(['day', 'year', 'month', 'gebjahr'], axis=1, inplace=True)\n",
+    "soep.drop(['day', 'month', 'index'], axis=1, inplace=True)\n",
     "# delete invalid time stamps as they cannot be merged with climate data:\n",
     "soep = soep[soep['time'].notna()].reset_index()\n",
-    "# all values that are negative are nan values\n",
-    "soep[soep.select_dtypes(include=['int', 'float']) < 0] = np.nan\n",
     "\n",
     "## DROP DUPLICATE ROWS\n",
-    "soep.set_index(['pid', 'time'])\n",
+    "soep.set_index(['pid', 'time'], inplace=True)\n",
+    "soep.sort_index(inplace=True)\n",
     "soep = soep[~soep.index.duplicated(keep='first')]\n",
     "\n",
-    "## SAFE DATAFRAME\n",
-    "soep.to_csv(\"./prod/soeplong.csv\", index=True)"
+    "## CALCULATE CHANGE IN SWB\n",
+    "soep['plh0182d'] = soep[['plh0182']].groupby('pid').diff(periods=1, axis=0)\n",
+    "soep.reset_index(inplace=True)\n",
+    "\n",
+    "## PRINT EXAMPLE\n",
+    "soep.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b48e842c-3d1a-447a-bf78-ebcd82e59955",
+   "metadata": {},
+   "source": [
+    "# Data Cleanup\n",
+    "\n",
+    "Most of the variables need some manual preparation when it comes to negative values. The conventions for missing values in SOEP is:\n",
+    "\n",
+    "| Code | Label                                              | \n",
+    "|------|----------------------------------------------------|\n",
+    "| -1   | No answer / don’t know                             |\n",
+    "| -2   | Does not apply                                     |\n",
+    "| -3   | Implausible value                                  |\n",
+    "| -4   | Inadmissable multiple response                     |\n",
+    "| -5   | Not included in this version of the questionnaire  |\n",
+    "| -6   | Version of questionnaire with modified filtering   |\n",
+    "| -7   | Only available in less restricted edition          |\n",
+    "| -8   | Question not part of the survey program this year  |\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb5f121e-e24e-4687-86c3-f3339b9f9b47",
+   "id": "24aa1ca5-33b1-4687-8d42-6e7ed7aa48a7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f39b551-2e79-4fd5-bfa7-92834b0d1861",
+   "metadata": {},
+   "source": [
+    "The number of children is a numerical value. If a person did not have children the value is $-2$. This is changed to 0.\n",
+    "All the other values are nan values. However, since the number of children does not change ofter, we can fill nan values with earlier observations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa0aeb91-c6b0-4871-9bf8-0cfa7c7f67c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soep['hlc0043'] = soep['hlc0043'].replace({-2:0})\n",
+    "soep.loc[soep['hlc0043'] < 0, 'hlc0043'] = np.nan\n",
+    "soep['hlc0043'] = soep['hlc0043'].fillna(method='ffill')\n",
+    "soep[['hlc0043']].value_counts(dropna=False).plot(kind='bar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d96ec00-3a1a-4b99-9e30-7af126d78d69",
+   "metadata": {},
+   "source": [
+    "The partner variable also has some redundant values. We have that $[3] \\approx [1]$ and $[4] \\approx [2]$. Furthermore, we have that $[5]$ stands for \"unsure\". \n",
+    "Therefore, $[5]$ will be set to nan. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af7c2379-9a37-496b-8b15-0cc4a7ffb735",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clean values\n",
+    "soep.loc[soep['partner'] == 3, 'partner'] = 1\n",
+    "soep.loc[soep['partner'] == 4, 'partner'] = 2\n",
+    "# the rest is nan\n",
+    "soep.loc[(soep['partner'] == 5) | (soep['partner'] < 0), 'partner'] = np.nan\n",
+    "soep[['partner']].value_counts(dropna=False).plot(kind='bar')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7728948f-bbbc-4012-a2dc-9144e5b63cde",
+   "metadata": {},
+   "source": [
+    "With year of birth negative values are missing. We can use this variable to calculate the age of each person. Each age that is over 120 is concidered an outlier."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6db8e80-a03d-4329-b072-5c7f2c47b58f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soep.loc[soep['gebjahr'] < 1800, 'gebjahr'] = np.nan\n",
+    "soep[\"age\"] = soep[\"year\"] - soep[\"gebjahr\"]\n",
+    "soep[soep[\"age\"] > 120] = np.nan\n",
+    "soep['age'].hist(bins=20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "457c9e96-dc97-40de-ae1f-eb712f24ae85",
+   "metadata": {},
+   "source": [
+    "Years of education can also be padded with old values. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69ff31b4-e0be-4572-8017-ea19208fc6c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soep.loc[soep['d11109'] < 0, 'd11109'] = np.nan\n",
+    "soep['d11109'] = soep['d11109'].fillna(method='ffill', limit=2)\n",
+    "soep['d11109'].hist(bins=20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ca79713-de6d-4276-84ba-72ce4aed51ed",
+   "metadata": {},
+   "source": [
+    "In the follwoing variables the negative values add no information and are therefore just set to nan:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1227b58d-56ce-42cb-933e-c3097006b3dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols = ['hlc0005_h', 'hlf0001_h', 'hlk0056', 'bula_h', 'hlk0056', 'hlf0001_h', 'sex']\n",
+    "for col in cols:\n",
+    "    soep.loc[soep[col] < 0, col] = np.nan"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ffb1691-4920-4482-bafc-78f583f0be6f",
+   "metadata": {},
+   "source": [
+    "Save the dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26f1866a-15c1-4b3f-8481-0fb32fc7d6f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soep.to_csv(\"./prod/soeplong.csv\", index=True)"
+   ]
   }
  ],
  "metadata": {
