--- a/explore.ipynb
+++ b/explore.ipynb
@@ -1328,9 +1328,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:geo]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-geo-py"
   },
   "language_info": {
    "codemirror_mode": {
